Fix theme build out of the box.

--- a/templates/kumquat-theme/8/assets-src/sass/abstractions/_link.scss
+++ b/templates/kumquat-theme/8/assets-src/sass/abstractions/_link.scss
@@ -4,10 +4,14 @@
 %link {
   @include transition(color);
   color: $link-color;
-  text-decoration: underline;
 
   &:hover,
   &:focus {
     color: $link-hover-color;
   }
+}
+
+%underlined-link {
+  @extend %link;
+  text-decoration: underline;
 }
