--- a/templates/kumquat-theme/8/assets-src/sass/variables/_colors.scss
+++ b/templates/kumquat-theme/8/assets-src/sass/variables/_colors.scss
@@ -21,7 +21,9 @@ $purple-dark: #323787;
 $purple: #4146af;
 $purple-light: #e1e6ff;
 
+$blue: #3c4696;
 $green: #0f8246;
+$orange: #d25800;
 $red: #d3001b;
 $black: #000000;
 
